Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
"Farbrausch - Precision" demo ( https://files.scene.org/view/parties/2006/assembly06/in64/fr-048_precision_by_farbrausch.zip ) executable quits instantly since r72989, it worked before that. In the log - an exception showing only an address.
Attachments
Issue Links
- blocks
-
CORE-12047 Fixes for legacy Mm Paging
-
- Resolved
-
- relates to
-
CORE-19349 [LDR] Is SEH still needed here? A potential optimization
-
- Resolved
-