[0.4.7][NTOS:MM] Fix Regression, "Precision" demo executable doesn't load CORE-12400 (#503), + follow-up (#5002)

This fixes the "Farbrausch - Precision" demo
https://files.scene.org/view/parties/2006/assembly06/in64/fr-048_precision_by_farbrausch.zip
from not loading any longer.
It broke by SVN r72989 == git 63bbaff80322dd72967a42e62f9e5d949038f9d6

The fix is a combined backport of 2 commits:
1.)
0.4.10-dev-136-g c7eb46d9fdda30a3b286e244eba023d95f0a4a9b (#503)
where Mark Jansen aimed to fix loading executables treated with the binary packer "mPress".
This is what fixed the "Farbrausch - Precision" demo as well.
Marks commit back then referenced CORE-12582 and CORE-14556 although it never was enough to solve any of the 2 tickets entirely.
I do just reference them here again to preserve that ancient (questionable) linkage.

2.)
Since Marks commit back then introduced a very severe regression as well, I do have to port back also the following commit:
0.4.15-dev-5589-g 0d4a8d0ea6fba6da0c13f597f614ebd6f20086fd (#5002)
to prevent me to introduce into older releases the bug
CORE-18797 "SizeOfRawData of BSS section should not be processed"
(which had many duplicates, e.g. Doom95, compiled with Watcom-C-compilers would not longer work without that)

-------------

I felt the need to underline that I have tested that porting back the following commit
0.4.10-dev-474-g dfff8ed0d82e433b9f620b3ac77ce38ecfa42d05
is *NOT* needed in the older branches to prevent
CORE14838 "Antivir 6 deadlocks RtlpWaitForCriticalSection when 'scanning the process list'"
although the JIRA-tickets referenced the same unhiding commit 0.4.10-dev-136-g c7eb46d9fdda30a3b286e244eba023d95f0a4a9b for the master branch.
I consider that as being a temporary workaround that has been applied to master, which seems to be not needed in the older branches,
and it may be possible that we may get rid of that on master too at some point in the future.

------------

NTOSKRNL binary size unchanged:
releases/0.4.9 RosBEWin2.1.6 GCC4.7.2dbg  4.311.552 -> 4.311.552
releases/0.4.8 RosBEWin2.1.6 GCC4.7.2dbg  4.296.704 -> 4.296.704
releases/0.4.7 RosBEWin2.1.6 GCC4.7.2dbg  4.231.168 -> 4.231.168